--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,22 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TrackSplit</title>
+  <style>
+    /* Set html and body to full height and remove margins */
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      padding-top: 20px;
+    }
+
+    /* Ensure the root element takes up the full viewport */
+    #root {
+      height: 100%;
+      width: 100%;
+    }
+  </style>
 </head>
 
 <body>
